# ChangeLog for dev-python/pika
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pika-0.9.12 (09 May 2013)

  09 May 2013; Alex Brandt <alunduil@alunduil.com> +pika-0.9.12.ebuild:
  Add pika-0.9.12 ebuild
