@@ -1,4 +1,5 @@
 DIST pika-0.9.12.tar.gz 61825 SHA256 670787ee6ade47cadd1ec8220876b9b7ae4df7bc4b9dd1d808261a6b47e9ce5d SHA512 9e0352452b7f05e2945c0e18ada6637b5ee698cb3d7200e1a3620a517e412232f62808bcfdf2c22f9a8e74ac67cfe5dbdb27d8fe48f118ae0e5919a8b5717bda WHIRLPOOL dd37a41ea16dff96677f1b8fcadb06ec55c2c0914f0e6d8c978826b75909d37fbfb9186b6b4327b4395ab6b25fa36a71048eb1228cf59e5b8d47de5f7c5ce868
+EBUILD pika-0.9.12-r1.ebuild 588 SHA256 b251442ae2d3fd1cf31653d4ff6a267c83e952251fb954c8dac8988ee151b070 SHA512 eda3f17621bbf36a9658f9aea6fa1e1abedf68982fb27a8ffd9c6775512c10534c8d9d6a3166cc71323ec72a5154126aaa32f7ac64e790ef44a66937fd874ee9 WHIRLPOOL cfa7207a23f9182dee83e42a5fd6e52ea098d4d3fdeefc234c3b26cb3a8965ae28256a37fe368114bba1ceb75ae3c60657c5a99227ca32188471f77284e37614
 EBUILD pika-0.9.12.ebuild 578 SHA256 c7523756fb60543d7657b84f1c7fb4f06daa7c0e9f6281f92026ebfc551845a9 SHA512 12ada40cddb85fda75c74c5b8a3ca3b26ef8a5105de6103848d4d113e4baa3b69bb943429de5723484982082ff9e2cb7d86c74242305d75049831d886000a605 WHIRLPOOL 43c5fc948711c4436e19b85848a434ea853a017241d2ce28ee650d9edf3cfb27c9288b0a093e7331c7a486965877e7d229cc40fad53942d5f6b122c1bb3465ed
-MISC ChangeLog 242 SHA256 2a548625c1e88a642ac7a402e42b6b707a66de5d325254b9a401dcb7698a88c6 SHA512 32730232d761a70a051f57764d3f97a3d6f0f0921805f5baeffca45caab322bab973ab7a334ea1117d4556af0e62f2241e9a4799b34a2b81fc28455c83367f91 WHIRLPOOL 8db1ed2fc037cb8f517bcc566879f5e0e6e12f390a22cb31ae831afeed494b5846680b8c64991cae46005b92c744bcef0b04215e77401c9e8f9e0c55eea861bf
+MISC ChangeLog 374 SHA256 2a22b8a73336968c224316866c6382ccf8fa525f1c3a920791ef008c352a397d SHA512 498abe13cf78fcdc0f4d36431a15d2bf1394b770ffa2bc5074ba2a7664413538a44aad7dd6177caa68b1c4cb98c923b2387bf92ce47682725935966869cbf7a8 WHIRLPOOL bfae19ecfb864bbaabc841946b16b70b77e2a92ab7c247877889f642de868ed4fc8ea78079b60dd66e4bde290b3944c3949a84d4da545f74e2d2355b2c491479
 MISC metadata.xml 284 SHA256 17fb3872034d6ebe2406456c11ce51ce35ebcd0cdb3d11c098de0bf39d5431e4 SHA512 e23f2a8cf77aa0d3f312e5897cfb380d326701f680cd2e1147592b97b79ecf242d8286517f3c9283113d7abf93f1856290e0efbb6a42bc01af4f50a1133b1d5f WHIRLPOOL d7e74af07fde7ff86ea6e5206c521b7ee8a714f17d438cbfb767e96103b5e311fd306591e2eb86e9015f5cd5d04ecd262c9736a99a12858ac5916a19c1e5b08d
