@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pika-0.9.12-r1 (25 Jun 2013)
+
+  25 Jun 2013; Alex Brandt <alunduil@alunduil.com> +pika-0.9.12-r1.ebuild:
+  Add PYTHON3_3 to pika.
+
 *pika-0.9.12 (09 May 2013)
 
   09 May 2013; Alex Brandt <alunduil@alunduil.com> +pika-0.9.12.ebuild:
